--- a/ECommerceWebsite/css/style.css
+++ b/ECommerceWebsite/css/style.css
@@ -1,7 +1,7 @@
 /* for the links */
 a:link {
 	color: gray;
-	background-color: transparent;
+	background-color: white;
 	text-decoration: none;
 }
 
@@ -23,18 +23,29 @@ a:active {
 	text-decoration: none;	
 }
 
-banner {
-  background: 'Seagreen';	
+.userOption {
+    color: blue;
+    text-decoration: underline;
+    padding-left: 1%;
 }
 
+/*banner {*/
+  /*background: 'Color.Seagreen';*/
+/*}*/
+
 .image_thumbnail {
-	height: 50px;
-	width: 50px;
+    display: block;
+	height: auto;
+	width: 100%;
 }
 
 .image_large {
 	height: 400px;
 	width: 400px;
+}
+
+h1 {
+    text-align: center;
 }
 
 h3 {
@@ -56,7 +67,7 @@ h4 {
 }
 
 header {
-  background-color: #f2f2f2;
+  /*background-color: #f2f2f2;*/
   font-family: 'Helvetica Neue',Sans-serif;
   font-size: 0.9em;
   text-align: right;
@@ -80,13 +91,17 @@ footer {
 }
 
 table, th, td, tr {
-	border: 1px solid gray;
+	border: 2px solid black;
 	border-collapse: collapse;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 50px;
-	width= 20%;
-	height= 20%;
+}
+table {
+    padding-left: 10px;
+    padding-right: 10px;
+    padding: 5px;
+    width: 100%;
+    height: auto;
 }
 
 #description {
