--- a/ECommerceWebsite/css/items.css
+++ b/ECommerceWebsite/css/items.css
@@ -81,12 +81,48 @@ h1 {
 }
 
 #overlay {
-    border:1px solid black;
     width:250px;
     height: 300px;
     /*background-image: url("../images/item1/tshirtWhite.jpg");*/
     background-repeat: no-repeat;
     display: inline-block;
+}
+
+.descriptionContainer {
+    text-align: center;
+    border-top: 1px solid black;
+}
+
+.pageContainer {
+    width: 1000px;
+    length: auto;
+    text-align: center;
+    border: 1px solid black;
+}
+
+#btnContainer {
+    padding-bottom: 2%;
+}
+.productList {
+    border-right: 1px solid black;
+}
+
+.itemCategories {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+}
+
+.itemName{
+    border-bottom: 1px solid black;
+}
+#descriptionHeader {
+
+}
+
+#descriptionContent {
+    text-align: left;
+    padding-left: 2%;
+    text-indent: 20px;
 }
 
 
