--- a/ECommerceWebsite/css/buyItem.css
+++ b/ECommerceWebsite/css/buyItem.css
@@ -2,3 +2,35 @@
     width: 250px;
     height: 300px;
 }
+
+.pageContainer {
+    border: 1px solid black;
+    text-align: center;
+}
+
+.itemSelected{
+    border-bottom: 1px solid black;
+}
+
+.form {
+    text-align: center;
+}
+
+table {
+    padding-left: 2%;
+}
+
+.formSep {
+    border-top: 1px solid black;
+    padding-top: 2%;
+}
+
+#submitOrder {
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+#submitbtn {
+    width: 110px;
+    height: 40px
+}
