--- a/ECommerceWebsite/css/about.css
+++ b/ECommerceWebsite/css/about.css
@@ -23,3 +23,10 @@
     margin-right: 100px;
     text-align: center;
 }
+
+.about-container {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    overflow: scroll;
+}
