--- a/ECommerceWebsite/css/contact.css
+++ b/ECommerceWebsite/css/contact.css
@@ -23,3 +23,10 @@
     margin-right: 100px;
     text-align: center;
 }
+
+.contact-container {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    overflow: scroll;
+}
