--- a/ECommerceWebsite/css/items.css
+++ b/ECommerceWebsite/css/items.css
@@ -1,5 +1,12 @@
 /* for the links */
 
+.items-container {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    overflow: scroll;
+}
+
 a:link {
     color: gray;
     background-color: white;
@@ -79,6 +86,7 @@ h2 {
 }
 
 #imgZoom {
+    position:absolute;
     width: 250px;
     height: 300px;
 }
@@ -163,15 +171,15 @@ h2 {
 .itemName{
     border-bottom: 1px solid black;
 }
-#descriptionHeader {
 
-}
 
 #descriptionContent {
     text-align: left;
     padding-left: 2%;
     text-indent: 20px;
 }
+
+
 
 
 
