--- a/ECommerceWebsite/css/items.css
+++ b/ECommerceWebsite/css/items.css
@@ -1,12 +1,4 @@
 /* for the links */
-
-.items-container {
-    position: absolute;
-    min-height: 100%;
-    min-width: 100%;
-    overflow: scroll;
-}
-
 a:link {
     color: gray;
     background-color: white;
@@ -85,8 +77,8 @@ h2 {
     font-weight: bold;
 }
 
+
 #imgZoom {
-    position:absolute;
     width: 250px;
     height: 300px;
 }
@@ -131,7 +123,7 @@ h2 {
     height: 300px;
     /*background-image: url("../images/item1/tshirtWhite.jpg");*/
     background-repeat: no-repeat;
-    display: inline-block;
+    /*display: inline-block;*/
 }
 
 .descriptionContainer {
@@ -144,6 +136,7 @@ h2 {
     length: auto;
     text-align: center;
     border: 1px solid black;
+    display: inline-block;
 }
 
 #btnContainer {
@@ -171,7 +164,6 @@ h2 {
 .itemName{
     border-bottom: 1px solid black;
 }
-
 
 #descriptionContent {
     text-align: left;
