--- a/ECommerceWebsite/css/buyItem.css
+++ b/ECommerceWebsite/css/buyItem.css
@@ -1,30 +1,12 @@
-body {
-    background-color: cornflowerblue;
-}
-
-h1 {
+.form {
+    font-family: 'Helvetica Neue', Sans-serif;
     text-align: center;
 }
+
+/*show product image*/
 #showImg {
     width: 250px;
     height: 300px;
-}
-
-.pageContainer {
-    border: 1px solid black;
-    text-align: center;
-}
-
-.itemSelected{
-    /*border-bottom: 1px solid black;*/
-}
-
-.form {
-    text-align: center;
-}
-
-table {
-    padding-left: 2%;
 }
 
 .formSep {
@@ -37,20 +19,30 @@ table {
     padding-bottom: 2%;
 }
 
-#submitbtn {
-    width: 110px;
-    height: 40px
-}
-
 #totalCost {
     font-weight: bold;
     font-size: larger;
 }
 
 .costContainer {
-    border-top: 1px solid black;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .buyItemTableContainer {
     border: none;
+    padding-left: 2%;
+}
+
+.inputReadOnly {
+    font-family: 'Helvetica Neue', Sans-serif;
+    font-size: 17px;
+    background-color: transparent;
+    border: none;
+}
+
+.centerOverview {
+    text-align: left;
+    padding-left: 2%;
 }
