--- a/ECommerceWebsite/css/items.css
+++ b/ECommerceWebsite/css/items.css
@@ -96,10 +96,10 @@
 }
 
 #btn {
-    background-color: #757575;
+    background-color: #18a300;
     width: 100px;
     height: 50px;
-    color: darkred;
+    color: floralwhite;
 }
 .productList {
     border-right: 1px solid black;
