--- a/ECommerceWebsite/css/header_footer.css
+++ b/ECommerceWebsite/css/header_footer.css
@@ -6,7 +6,7 @@ body {
 .navMenu {
     margin-left: auto;
     margin-right: auto;
-    margin-right: 8px;
+    /*margin-right: 8px;*/
 }
 
 .navBar {
