--- a/ECommerceWebsite/css/header_footer.css
+++ b/ECommerceWebsite/css/header_footer.css
@@ -43,7 +43,8 @@ body {
     margin-left: 100px;
     margin-right: 100px;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     color: #efefef;
 }
 
